--- a/index_iframe.html
+++ b/index_iframe.html
@@ -117,13 +117,13 @@
     <script type='text/javascript'>
       //<![CDATA[
         $(function() {
-
+          
           var myMap = new MapsLib({
-            fusionTableId:      "1FMjVRb16OqlkeodL7onaQ5A7jamtpSY0TmHaa-WQ",
-            googleApiKey:       "AIzaSyDIevSvpV-ONb4Pf15VUtwyr_zZa7ccwq4",
-            locationColumn:     "Address",
-            map_center:         [41.76, -72.69],
-            locationScope:      "Connecticut"
+            fusionTableId:      "16LdINxLkOQdg_sqtdAt__pfxa7nlF3lO0oI3ij_j",
+            googleApiKey:       "AIzaSyAxsgQpFVLtTWb1tbJ0z5ZbzEr2T_sazjA",
+            locationColumn:     "Latitude",
+            map_center:         [42.662882481467776, -75.13879103017155],
+            locationScope:      "New York"
           });
 
 
