--- a/index_iframe.html
+++ b/index_iframe.html
@@ -124,7 +124,7 @@
             googleApiKey:       "AIzaSyAxsgQpFVLtTWb1tbJ0z5ZbzEr2T_sazjA",
             locationColumn:     "Latitude",
             map_center:         [42.662882481467776, -75.13879103017155],
-            locationScope:      "New York"
+            locationScope:      "new york"
           });
 
 
